--- a/history_ui/css/settings.css
+++ b/history_ui/css/settings.css
@@ -230,3 +230,24 @@ input[type=number]:focus {
     margin-right: 20px;
   }
 }
+
+.alert {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  border-radius: 2px;
+  border: 1px solid transparent;
+  color: #3c763d;
+  font-size: 17px;
+  line-height: 1.5;
+  padding: 1em;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  width: auto;
+  max-width: 100%;
+  max-height: 61.5px;
+  display:none;
+}
+
+b, strong {
+  font-weight: 700;
+}
